--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,32 @@
 spring:
   application:
     name: WhatsApp-Business-Accounts
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/WABA
+    username: postgres
+    password: root@root
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+facebook:
+  app:
+    id: ""
+    secret: ""
+  redirect:
+    url: "http://localhost:8080/api/waba/oauth/callback"
+
+  api:
+    version: "v22.0"
+
+whatsapp:
+  phone-number-id: ""
+  waba-id: ""
+  test-token:
+  api-version: v22.0
+  base-url: https://graph.facebook.com
+
